# lighthouse

./: .gitignore  Cargo.toml
account_manager/src/: main.rs
beacon_node/beacon_chain/: Cargo.toml
beacon_node/beacon_chain/src/: beacon_chain.rs  test_utils.rs
beacon_node/client/: Cargo.toml
beacon_node/client/src/: beacon_chain_types.rs  client_config.rs
beacon_node/src/: main.rs
beacon_node/store/: Cargo.toml
beacon_node/store/src/impls/: beacon_state.rs
eth2/shard_lmd_ghost/: cargo.toml
eth2/shard_lmd_ghost/src/: lib.rs  reduced_tree.rs
eth2/shard_operation_pool/: Cargo.toml
eth2/shard_operation_pool/src/: attestation_id.rs  lib.rs
eth2/shard_state_processing/: Cargo.toml  lib.rs
eth2/shard_state_processing/execution_environments/: sheth.wasm
eth2/shard_state_processing/src/: lib.rs  macros.rs  per_shard_block_processing.rs  per_shard_slot_processing.rs
eth2/shard_state_processing/src/common/: get_attesting_indices.rs  mod.rs
eth2/shard_state_processing/src/per_period_processing/: process_period_committee.rs
eth2/shard_state_processing/src/per_shard_block_processing/: add_fee.rs  errors.rs  process_shard_block_header.rs  validate_shard_attestation.rs
eth2/shard_state_processing/src/per_shard_slot_processing/: errors.rs  process_shard_slot.rs
eth2/state_processing/benches/: bench_block_processing.rs  benches.rs  block_benching_builder.rs
eth2/state_processing/src/: get_genesis_state.rs  lib.rs  per_block_processing.rs  per_epoch_processing.rs  per_shard_block_processing.rs  per_shard_slot_processing.rs  per_slot_processing.rs
eth2/state_processing/src/common/: get_attesting_indices.rs  mod.rs
eth2/state_processing/src/per_block_processing/: validate_attestation.rs  verify_exit.rs
eth2/state_processing/src/per_epoch_processing/: errors.rs  process_period_committee.rs
eth2/types/src/: beacon_state.rs  chain_spec.rs  lib.rs  period.rs  period_committee.rs  persistent_committee.rs  relative_period.rs  shard_attestation.rs  shard_attestation_data.rs  shard_block.rs  shard_block_body.rs  shard_block_header.rs  shard_committee.rs  shard_pending_attestation.rs  shard_state.rs  slot_epoch.rs  slot_height.rs
eth2/types/src/beacon_state/: beacon_state_types.rs  committee_cache.rs  period_committee_cache.rs
eth2/types/src/shard_state/: shard_state_types.rs
eth2/types/src/test_utils/: testing_attestation_data_builder.rs
eth2/utils/bls/: Cargo.toml
eth2/utils/bls/src/: aggregate_public_key.rs
eth2/utils/cached_tree_hash/: Cargo.toml
eth2/utils/cached_tree_hash/src/: btree_overlay.rs  tree_hash_cache.rs
eth2/utils/fixed_len_vec/src/: lib.rs
eth2/utils/slot_clock/src/: lib.rs  testing_slot_clock.rs
shard_node/: Cargo.toml  cargo.toml
shard_node/rest_api/: Cargo.toml
shard_node/rest_api/src/: config.rs  error.rs  helpers.rs  lib.rs  shard.rs  url_query.rs
shard_node/shard_chain/: Cargo.toml
shard_node/shard_chain/src/: checkpoint.rs  errors.rs  fork_choice.rs  harness.rs  harness_tests.rs  iter.rs  lib.rs  shard_chain.rs
shard_node/shard_client/: Cargo.toml
shard_node/shard_client/src/: lib.rs
shard_node/shard_store/: Cargo.toml
shard_node/shard_store/src/: block_at_slot.rs  impls.rs  iter.rs  lib.rs  memory_store.rs
shard_node/src/: main.rs  run.rs
shard_node/store/: Cargo.toml
shard_node/store/src/: block_at_slot.rs  iter.rs
validator_client/: Cargo.toml
validator_client/src/: config.rs  main.rs
(+1 files in other folders)
