  
[package]
name = "rest_api"
version = "0.1.0"
authors = ["Luke Anderson <luke@lukeanderson.com.au>", "Will Villanueva"]
edition = "2018"

[dependencies]
beacon_chain = { path = "../../beacon_node/beacon_chain" }
shard_chain = { path = "../shard_chain" }
shard_store = { path = "../shard_store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.8"
slog = "^2.2.3"
slog-term = "^2.4.0"
slog-async = "^2.3.0"
eth2_ssz = { path = "../../eth2/utils/ssz" }
eth2_ssz_derive = { path = "../../eth2/utils/ssz_derive" }
types = { path = "../../eth2/types" }
http = "^0.1.17"
hyper = "0.12.34"
exit-future = "0.1.3"
tokio = "0.1.17"
url = "2.0"
lazy_static = "1.3.0"
futures = "0.1.25"
